# RGFW

./: .gitignore  CHANGELOG  CMakeLists.txt  CONVENTIONS.md  Doxyfile  LICENSE  Makefile  README  README.md  RGF.h  RGFW.h  RGFW.hp  TODO  XDL.h  compile_flags.txt  index.html  main.c  premake5.lua  silicon.h  wayland.mk
.github/: FUNDING.yml
Silicon/: .gitignore  LICENSE  Makefile  README.md
docs/: CONVENTIONS_8md.html  README_8md.html  RGFW_8h.html  RGFW_8h_source.html  XDL_8h.html  XDL_8h_source.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_func_x.html  globals_g.html  globals_i.html  globals_p.html  globals_r.html  globals_type.html  globals_type_p.html  globals_type_r.html  globals_type_u.html  globals_u.html  globals_vars.html  globals_x.html  group__Callbacks.html  group__Clipboard.html  group__Input.html  group__Monitor.html  group__Supporting.html  group__Threads.html  group__Window__management.html  group__error.html  group__gamepad.html  group__graphics__API.html  group__joystick.html  (+83 more)
examples/: README.md
examples/vk10/: CMakeLists.txt  RGFW_vulkan.h  main.c  main.cpp  vk10.c  vkinit.h
examples/vk10/shaders/: vert.vert
osmesa/: .gitignore  Makefile  README  objects.mk  objects.sh
tests/: clipboard.c  loop.c  memory.c
wasm/: basic.html  buffer.html  callbacks.html  downloads.html  events.html  first-person-camera.html  gamepad.html  gl11.html  gl33.html  gles2.html  nuklear.html  osmesa_demo.html  (+4 more)
(+399 files in other folders)
